Fix for images not showing on device

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -34,26 +34,26 @@
   }
 
   .cell-1 {
-    background: url('../../assets/img/main_menu/search.png');
+    background: url('../assets/img/main_menu/search.png');
   }
 
   .cell-2 {
-    background: url('../../assets/img/main_menu/news.png');
+    background: url('../assets/img/main_menu/news.png');
   }
 
   .cell-3 {
-    background: url('../../assets/img/main_menu/monitoring.png');
+    background: url('../assets/img/main_menu/monitoring.png');
   }
 
   .cell-4 {
-    background: url('../../assets/img/main_menu/about.png');
+    background: url('../assets/img/main_menu/about.png');
   }
 
   .cell-5 {
-    background: url('../../assets/img/main_menu/about.png');
+    background: url('../assets/img/main_menu/about.png');
   }
 
   .cell-6 {
-    background: url('../../assets/img/main_menu/login.png');
+    background: url('../assets/img/main_menu/login.png');
   }
 }
